# mitmb

./: .gitignore  README.md  config.py  dataset.py  evaluate.py  losses.py  model.py  pyproject.toml  requirements.txt  train.py  visualize.py
outputs/: predictions.json  results.json  training_history.json
scripts/: fetch_dataset.sh
