[project]
name = "files"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "nuscenes-devkit>=1.1.11",
    "pillow>=9.5.0",
    "pyquaternion>=0.9.9",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
]
